# typology-fst

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindOpenFst.cmake
